Fix: grid sizing on small devices

--- a/src/app/pages/home/contact/contact-form/contact-form.component.css
+++ b/src/app/pages/home/contact/contact-form/contact-form.component.css
@@ -10,7 +10,3 @@
 .rigth-border {
   border-right: 1px solid rgb(189, 189, 189);
 }
-
-.form-column {
-  padding: 2rem;
-}
